[package]
name = "lsmkv"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
bytes = "1.12.1"
futures = "0.3.33"
lake = { version = "0.1.0", path = "src/lake" }
memmap2 = "0.9.11"
serde = { version = "*", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.53.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
